--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ requires-python = ">=3.13"
 dependencies = [
     "aiosqlite>=0.21.0",
     "discord-py>=2.6.0",
+    "logfire>=4.7.0",
     "pydantic-ai>=0.7.4",
     "pydantic-settings>=2.10.1",
 ]
